before reinstall copy

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -7,7 +7,7 @@
       font-family: Helvetica;
     }
     .router-link-active {
-        color:  rgba(var(--colors-link-active), var(--tw-text-opacity));
+        color:  rgba(var(--colors-font-color), var(--tw-text-opacity));
     }
     
     .logo {
